--- a/remotedebugtool/client/Demo/bin/h5/index.html
+++ b/remotedebugtool/client/Demo/bin/h5/index.html
@@ -14,6 +14,10 @@
 <body style='margin:0;overflow:none;overflow-x:hidden;overflow-y:hidden;background-color: #000;'>
 <!--以下引用了常用类库，如果不使用，可以删除-->
 
+<!--以下引用了常用类库，如果不使用，可以删除-->
+
+<!--以下引用了常用类库，如果不使用，可以删除-->
+
 <script src='Client.max.js' loader='laya'></script>
 </body>
 </html>
