--- a/debugtoolplatform/ElectronApp/DeskPlatform/plugins/AnswerFlow/index.html
+++ b/debugtoolplatform/ElectronApp/DeskPlatform/plugins/AnswerFlow/index.html
@@ -13,6 +13,6 @@
 </head>
 <body style='margin:0;overflow:none;overflow-x:hidden;overflow-y:hidden;background-color: #000;'>
 <script src='laya.js' loader='laya'></script>
-<script src='Demo.max.js' loader='laya'></script>
+<script src='AnswerFlow.max.js' loader='laya'></script>
 </body>
 </html>
